test/kube2e/glooctl/petstore_peerauth_permissive.yaml
apiVersion: "security.istio.io/v1"
kind: "PeerAuthentication"
metadata:
  name: "petstore"
  namespace: "default"
spec:
  selector:
    matchLabels:
      app: petstore
  mtls:
    mode: PERMISSIVE
